aws-vpc/main.tf
terraform {
  required_providers {

    aws = {
      source  = "hashicorp/aws"
      version = "6.67.0"
    }

    random = {
      source  = "hashicorp/random"
      version = "3.9.1"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

# VPC creation

resource "aws_vpc" "my-vpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
      Name = "my-vpc"
    }
}

#private subnet

resource "aws_subnet" "private-subnet" {
  vpc_id = aws_vpc.my-vpc.id
  cidr_block = "10.0.1.0/24"
  tags = {Name="private-subnet"}
}

#public subnet

resource "aws_subnet" "public-subnet" {
  vpc_id = aws_vpc.my-vpc.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "us-east-1a"
  tags = {Name="public-subnet"}
}

# internate gateway

resource "aws_internet_gateway" "my-igw" {
  vpc_id = aws_vpc.my-vpc.id
  tags = {Name="my-igw"}
}

# routing table

resource "aws_route_table" "mt-rt" {
  vpc_id = aws_vpc.my-vpc.id

  route  {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my-igw.id
  }
}


# route table association

resource "aws_route_table_association" "public-sub" {
  route_table_id = aws_route_table.mt-rt.id
  subnet_id = aws_subnet.public-subnet.id
}


resource "aws_instance" "ec2-from-vpc" {
  ami = "ami-00d8aa800578d8b12"
  instance_type = "t3.micro"
  subnet_id = aws_subnet.public-subnet.id

  tags = {
    Name = "ec2 from vpc"
  }
}
